--- a/Email_NB.ipynb
+++ b/Email_NB.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import\" data-toc-modified-id=\"Import-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import</a></span><ul class=\"toc-item\"><li><span><a href=\"#email_preprocess.py\" data-toc-modified-id=\"email_preprocess.py-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>email_preprocess.py</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import\" data-toc-modified-id=\"Import-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import</a></span><ul class=\"toc-item\"><li><span><a href=\"#Naive-Bayes:-email_preprocess.py\" data-toc-modified-id=\"Naive-Bayes:-email_preprocess.py-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Naive Bayes: email_preprocess.py</a></span></li><li><span><a href=\"#SVM-(Support-Vector-Machine)\" data-toc-modified-id=\"SVM-(Support-Vector-Machine)-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>SVM (Support Vector Machine)</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "853d08dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Email_NB'"
+       "'/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Intro_ML'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "16edeb62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path('/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Email_NB/Data')"
+    "path = Path('/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Intro_ML')"
    ]
   },
   {
@@ -84,17 +84,17 @@
    "id": "e5c23bd7",
    "metadata": {},
    "source": [
-    "### email_preprocess.py"
+    "### Naive Bayes: email_preprocess.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "7378e0da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess(words_file = '/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Email_NB/ud120-projects/tools/word_data.pkl', authors_file = '/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Email_NB/ud120-projects/tools/email_authors.pkl'):\n",
+    "def preprocess(words_file = '/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Intro_ML/ud120-projects/tools/word_data.pkl', authors_file = '/Users/yejiseoung/Dropbox/My Mac (Yejis-MacBook-Pro.local)/Documents/Projects/Intro_ML/ud120-projects/tools/email_authors.pkl'):\n",
     "    \"\"\"\n",
     "        This function takes a pre-made list of email texts (by default word_data.pkl)\n",
     "        and the corresponding authors (by default email_authors.pkl) \n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "33b82441",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "b2c31d1c",
    "metadata": {
     "scrolled": true
@@ -179,8 +179,8 @@
      "text": [
       "No. of Chris training emails :  7936\n",
       "No. of Sara training emails :  0\n",
-      "training time:  0.751 s\n",
-      "predicting time:  0.035 s\n",
+      "training time:  0.687 s\n",
+      "predicting time:  0.053 s\n",
       "accuracy: 0.9732650739476678\n",
       "scoring time:  0.001 s\n"
      ]
@@ -226,9 +226,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e7297fa",
+   "metadata": {},
+   "source": [
+    "### SVM (Support Vector Machine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b21ae550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicting time:  1628731494.21 s\n",
+      "accuracy_score:  0.9840728100113766\n",
+      "scoring time:  1628731494.211 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from time import time\n",
+    "\n",
+    "clf = SVC(kernel='linear')\n",
+    "clf.fit(X_train, y_train)\n",
+    "pred = clf.predict(X_test)\n",
+    "time1 = 0\n",
+    "print(\"predicting time: \", round(time()-time1, 3), \"s\")\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "acc = accuracy_score(pred, y_test)\n",
+    "print(\"accuracy_score: \", acc)\n",
+    "time2 = 0\n",
+    "print(\"scoring time: \", round(time()-time2, 3), \"s\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb549ab",
+   "id": "5b93c53c",
    "metadata": {},
    "outputs": [],
    "source": []
